Fix the overflow elements

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -11,6 +11,7 @@ body {
   background-color: #222;
   font-family: 'Arimo', sans-serif;
   color: $white;
+  overflow-x: hidden;
 }
 
 a {
